force-app/main/default/objects/Integration_Logs__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>