force-app/main/default/objects/Integration_Logs__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>