force-app/main/default/objects/Integration_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Quote__c</columns>
    <columns>Response__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_Id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>