force-app/main/default/objects/Integration_Logs__c/listViews/Integration_Log_Errors.listView-meta.xml
<ListView>
    <fullName>Integration_Log_Errors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Integration Log Errors</label>
</ListView>